# rust-lang-learning-examples

./: .gitignore  README.md  package-lock.json
concurrency/: Cargo.toml
concurrency/src/: main.rs
containers/src/: main.rs
enums/src/: main.rs
expression_and_ifelse/: Cargo.toml
expression_and_ifelse/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
hashmap_exp/: Cargo.toml
hashmap_exp/src/: main.rs
hello_test/src/: main.rs
hello_world/: main
is-digit/: Cargo.toml  README.md
is-digit/src/: lib.rs
is-digit/tests/: tests.rs
largest_fn/: Cargo.toml
largest_fn/src/: main.rs
living_period/: Cargo.toml
living_period/src/: main.rs
loops/src/: main.rs
match_and_if_let/: Cargo.toml
match_and_if_let/src/: main.rs
minicat/src/: lib.rs  main.rs
options/src/: main.rs
owner/src/: main.rs
package_crate_module/: Cargo.toml
package_crate_module/src/: lib.rs  main.rs
panic_and_error/: Cargo.toml
panic_and_error/src/: main.rs
slice/src/: main.rs
smart_pointers/src/: main.rs
strings/src/: main.rs
struct_exp/: Cargo.toml
struct_exp/src/: main.rs
tauri_hello/src/: index.html  main.js
tauri_hello/src-tauri/: Cargo.toml  tauri.conf.json
tauri_vite/: package-lock.json  package.json
tauri_vite/src/: App.vue  main.ts  styles.css  tailwind.css
tauri_vite/src-tauri/: Cargo.toml  tauri.conf.json
tauri_vite/src-tauri/src/: main.rs
tauri_vite/src/components/: Greet.vue
variables/src/: main.rs
