[package]
name = "is-digit"
version = "0.1.1"
edition = "2021"
author = "255doesnotexist"
license = "MIT"
description = "Detect decimal digit in char or first char of the str and String."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
